--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,33 @@
     <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
     <script>
+      const Pet = (props) => {
+        return React.createElement("div", {}, [
+          React.createElement("h1", {}, props.name),
+          React.createElement("h2", {}, props.animal),
+          React.createElement("h2", {}, props.breed),
+        ]);
+      };
+
       const App = () => {
-        return React.createElement(
-          "div",
-          {},
-          React.createElement("h1", {}, "Adopt Me!")
-        );
+        return React.createElement("div", {}, [
+          React.createElement("h1", {}, "Adopt Me!"),
+          React.createElement(Pet, {
+            name: "Luna",
+            animal: "Dog",
+            breed: "Havanese",
+          }),
+          React.createElement(Pet, {
+            name: "Pepper",
+            animal: "Bird",
+            breed: "Cockatiel",
+          }),
+          React.createElement(Pet, {
+            name: "Doink",
+            animal: "Cat",
+            breed: "Mix",
+          }),
+        ]);
       };
 
       const container = document.getElementById("root");
