--- a/src/index.html
+++ b/src/index.html
@@ -10,41 +10,6 @@
 
   <body>
     <div id="root">not rendered</div>
-    <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
-    <script>
-      const Pet = (props) => {
-        return React.createElement("div", {}, [
-          React.createElement("h1", {}, props.name),
-          React.createElement("h2", {}, props.animal),
-          React.createElement("h2", {}, props.breed),
-        ]);
-      };
-
-      const App = () => {
-        return React.createElement("div", {}, [
-          React.createElement("h1", {}, "Adopt Me!"),
-          React.createElement(Pet, {
-            name: "Luna",
-            animal: "Dog",
-            breed: "Havanese",
-          }),
-          React.createElement(Pet, {
-            name: "Pepper",
-            animal: "Bird",
-            breed: "Cockatiel",
-          }),
-          React.createElement(Pet, {
-            name: "Doink",
-            animal: "Cat",
-            breed: "Mix",
-          }),
-        ]);
-      };
-
-      const container = document.getElementById("root");
-      const root = ReactDOM.createRoot(container);
-      root.render(React.createElement(App));
-    </script>
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
